guestbook/ingress-route.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: guestbook-ui-ingressroute
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: PathPrefix(`/guestbook`)
      services:
        - name: guestbook-ui
          port: 80
  tls:
    certResolver: default
